@@ -1,3 +1,10 @@
+2010-06-06 Andreas Radke <andyrtr at archlinux.org>
+
+        * 3.2.1.3-1 :
+	- new upstream release = 3.2.1 RC2 = final
+	- bring deps/makedeps/optdeps in sync with 
+	  vanilla OOo
+
 2010-05-15 Andreas Radke <andyrtr at archlinux.org>
 
         * 3.2.1.1-1 :
